--- a/_first_layout.blade/how_are.html
+++ b/_first_layout.blade/how_are.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>من نحن</title>
-    <link rel="shortcut icon" href="/Group.ico" />
+    <link rel="shortcut icon" href="../dist/Group.ico" />
     <meta name="csrf-token" content="crsf">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -97,7 +97,7 @@
 
     <style>
         body {
-            background-image: url('.\dist\platform\images\img1.jpg');
+            background-image: url('../dist/platform/images/img1.jpg');
         }
         p,
         label {
