--- a/_main_layout.blade/mainPage.html
+++ b/_main_layout.blade/mainPage.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="shortcut icon" href="/Group.ico" />
+    <link rel="shortcut icon" href="../dist/Group.ico" />
     <title>مركز العمل التنموي معا</title>
     <link rel="stylesheet" href="../dist/platform/dist/styles/developer.css">
     <link rel="stylesheet" href="../dist/platform/dist/styles/style.css">
@@ -1150,7 +1150,6 @@
     }
 </style>
 
-<script type="text/javascript" src="../dist/js/app.js"></script>
 </body>
 
 </html>
