--- a/_first_layout.blade/on_project.html
+++ b/_first_layout.blade/on_project.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>مركز العمل التنموي معا</title>
-    <link rel="shortcut icon" href="/Group.ico" />
+    <link rel="shortcut icon" href="../dist/Group.ico" />
     <meta name="csrf-token" content="csrf">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -98,7 +98,7 @@
 
     <style>
         body {
-            background-image: url({{$site->img1}});
+            background-image:url('../dist/platform/images/img1.jpg');
         }
         p,
         label {
