--- a/_first_layout.blade/register.html
+++ b/_first_layout.blade/register.html
@@ -93,7 +93,10 @@
             height: auto;
         }
     </style>
-
+<!--******************************************* يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد ***************************  -->
+	
+	<!------------------------------------------يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد---------->
+   
     <!--****----******-------------------- start privet header ------------*********------********* -->
 
 
