--- a/_forest_layout.blade/email.html
+++ b/_forest_layout.blade/email.html
@@ -285,6 +285,10 @@
             color: white !important;
         }
     </style>
+	<!--******************************************* يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد ***************************  -->
+	
+	<!------------------------------------------يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد---------->
+   
 </head>
 
 <body>
