--- a/_sixth_layout.blade/changePassword.html
+++ b/_sixth_layout.blade/changePassword.html
@@ -139,6 +139,10 @@
             border: 1px solid gray;
         }
     </style>
+	<!--******************************************* يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد ***************************  -->
+	
+	<!------------------------------------------يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد---------->
+   
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light ">
