--- a/_thirst_layout.blade/index3.html
+++ b/_thirst_layout.blade/index3.html
@@ -250,7 +250,7 @@
         <div class="container ">
             <div class="row  " style="padding-bottom: 10px;min-height: 190px">
                 <div class="col-md-4 ">
-                    <input type="text" class="form-control" name="q" value="{{request('q')}}"
+                    <input type="text" class="form-control" name="q" value=""
                            placeholder="ابحث في عنوان الخبر" style="width: 100%"
                     >
                 </div>
