--- a/_thirst_layout.blade/show_art.html
+++ b/_thirst_layout.blade/show_art.html
@@ -283,7 +283,7 @@
                                 <p style="min-height: 72px">
                                    خبر نوعي خبر نوعي خبر نوعي....
                                 </p>
-                                <a href="/article/{{$item->id}}" title="" class="donate-me" data-ripple="">عرض الخبر</a>
+                                <a href="/article/1" title="" class="donate-me" data-ripple="">عرض الخبر</a>
                             </div>
                         </div>
                     </div>
