--- a/_first_layout.blade/on_project.html
+++ b/_first_layout.blade/on_project.html
@@ -185,13 +185,8 @@
 
                         <a class="dropdown-item" href="/activist/changePassword">تعديل كلمة المرور</a>
                         <a class="dropdown-item" href="/activist/editProfile">تعديل حساب</a>
-                        <a class="dropdown-item" href="{{ route('logout') }}"
-                           onclick="event.preventDefault();
-                                                     document.getElementById('logout-form').submit();">تسجيل خروج </a>
+                        <a class="dropdown-item" href="">تسجيل خروج </a>
                     </div>
-                    <form id="logout-form" action="{{ route('logout') }}" method="POST"
-                          style="display: none;">
-                    </form>
                 </li>
 
         </ul>
