--- a/_first_layout.blade/register.html
+++ b/_first_layout.blade/register.html
@@ -188,7 +188,7 @@
                        onclick="event.preventDefault();
                                                      document.getElementById('logout-form').submit();">تسجيل خروج </a>
                 </div>
-                <form id="logout-form" action="{{ route('logout') }}" method="POST"
+                <form id="logout-form" action="" method="POST"
                       style="display: none;">
                 </form>
             </li>
@@ -203,7 +203,7 @@
     </div>
     <div class="d-flex justify-content-center h-100">
         <!--1  -->
-        <form method="POST" action="{{ route('register') }}">
+        <form method="POST" action="">
             <div class="row">
                 <div class="col">
                     <div class="card">
@@ -440,7 +440,7 @@
                                     <span class="input-group-text">أخرى</span>
                                 </div>
                                 <input style="margin-bottom:-50px;" name="other_interests"
-                                       value="{{old("other_interests")}}">
+                                       value="">
                             </div>
                             <!--  السؤال-->
                             <div class="input-group form-group">
