col-md-4 col-sm-6

--- a/_thirst_layout.blade/show.html
+++ b/_thirst_layout.blade/show.html
@@ -270,7 +270,7 @@
     <div class="container">
         <div class="row ">
             <div class="our-cause remove-ext-50 loader-data" id="itemContainer">
-                <div class="col-sm-4">
+                <div class="col-md-4 col-sm-6">
                         <div class="caro-unit fadein">
                             <div class="cause-avatar">
                                 <a href="/article/1" title=""><img src="../dist/platform/images/img1.jpg" alt=""></a>
@@ -294,9 +294,9 @@
         <!-- pagination div -->
         <div class="row  " style="margin-top:50px;">
             <div class="col-sm-5"></div>
-            <div class="col-sm-4">
+            <div class="col-md-4 col-sm-6">
             </div>
-            <div class="col-sm-4"></div>
+            <div class="col-md-4 col-sm-6"></div>
         </div>
     </div>
 
