--- a/_thirst_layout.blade/index4.html
+++ b/_thirst_layout.blade/index4.html
@@ -321,7 +321,7 @@
     <div class="container">
         <div class="row " style="min-height: 190px">
             <div class="our-cause remove-ext-50 loader-data" id="itemContainer">
-                <div class="col-sm-4">
+                <div class="col-md-4 col-sm-6">
                         <div class="caro-unit fadein">
                             <div class="cause-avatar">
                                 <a href="/initiative/1" title=""><img src="1" alt=""></a>
@@ -345,10 +345,10 @@
         <!-- pagination div -->
         <div class="row  " style="margin-top:50px;">
             <div class="col-sm-5"></div>
-            <div class="col-sm-4">
+            <div class="col-md-4 col-sm-6">
 
             </div>
-            <div class="col-sm-4"></div>
+            <div class="col-md-4 col-sm-6"></div>
         </div>
     </div>
 
