--- a/_thirst_layout.blade/index5.html
+++ b/_thirst_layout.blade/index5.html
@@ -180,9 +180,9 @@
 
     <!-- pagination div -->
     <div class="row  " style="margin-top:50px;">
-        <div class="col-sm-4">
+        <div class="col-md-4 col-sm-6">
         </div>
-        <div class="col-sm-4 text-center">
+        <div class="col-md-4 col-sm-6 text-center">
 
         </div>
     </div>
