col-md-4 col-sm-6

--- a/_main_layout.blade/mainPage.html
+++ b/_main_layout.blade/mainPage.html
@@ -305,7 +305,7 @@
                                                 <div class="row" style="margin-left: 50px;">
                                                     <div class="our-cause remove-ext-50 loader-data" id="itemContainer">
                                                         <!--1  -->
-                                                        <div class="col-sm-4">
+                                                        <div class="col-md-4 col-sm-6">
                                                                 <div class="caro-unit fadein">
                                                                     <div class="cause-avatar">
                                                                         <a href="/initiative/1"
@@ -347,7 +347,7 @@
                                                 <div class="row">
                                                     <div class="our-cause remove-ext-50 loader-data"
                                                          id="itemContainer2">
-                                                        <div class="col-sm-4">
+                                                        <div class="col-md-4 col-sm-6">
                                                             <div class="caro-unit fadein">
                                                                 <div class="cause-avatar">
                                                                     <a href="/initiative/1"
@@ -383,7 +383,7 @@
                                                 <div class="row">
                                                     <div class="our-cause remove-ext-50 loader-data"
                                                          id="itemContainer3">
-                                                        <div class="col-sm-4">
+                                                        <div class="col-md-4 col-sm-6">
                                                             <div class="caro-unit fadein">
                                                                 <div class="cause-avatar">
                                                                     <a href="/initiative/1"
@@ -539,7 +539,7 @@
                 <div class="gap" style="margin-top:-100px">
                     <div class="container">
                         <div class="row ">
-                            <div class="col-sm-4 fromleft">
+                            <div class="col-md-4 col-sm-6 fromleft">
                                 <div class="volunteer-banner">
                                     <div class="banner-meta">
                                         <img src="../dist/platform/dist/images/voulenteer-icon.png" alt=""
