--- a/_sixth_layout.blade/dashboard.html
+++ b/_sixth_layout.blade/dashboard.html
@@ -257,62 +257,62 @@
                         </div>
 
                         <div class="form-group row">
-                            <label for="inputPassword" class="col-sm-4 col-form-label">اسم الناشط</label>
+                            <label for="inputPassword" class="col-md-4 col-sm-6 col-form-label">اسم الناشط</label>
                             <div class="col">
                             رمي أحمد حسن حسنين</div>
                         </div>
 
                         <div class="form-group row ">
-                            <label for="inputPassword" class="col-sm-4 col-form-label">اسم المستخدم</label>
+                            <label for="inputPassword" class="col-md-4 col-sm-6 col-form-label">اسم المستخدم</label>
                             <div class="col">
                                 rami1996
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="inputPassword" class="col-sm-4 col-form-label">حساب الفيس بوك</label>
+                            <label for="inputPassword" class="col-md-4 col-sm-6 col-form-label">حساب الفيس بوك</label>
                             <div class="col">
                                 fb.com/rami_oka
                             </div>
                         </div>
                         <div class="form-group row ">
-                            <label for="inputPassword" class="col-sm-4 col-form-label">الايميل</label>
+                            <label for="inputPassword" class="col-md-4 col-sm-6 col-form-label">الايميل</label>
                             <div class="col">
                                 rami_oka@oka.com
                             </div>
                         </div>
                         <div class="form-group row ">
-                            <label for="inputPassword" class="col-sm-4 col-form-label">الجنس</label>
+                            <label for="inputPassword" class="col-md-4 col-sm-6 col-form-label">الجنس</label>
                             <div class="col">
                                 ذكر
                             </div>
                         </div>
                         <div class="form-group row ">
-                            <label for="inputPassword" class="col-sm-4 col-form-label">رقم التواصل</label>
+                            <label for="inputPassword" class="col-md-4 col-sm-6 col-form-label">رقم التواصل</label>
                             <div class="col">
                                 0599636064
                             </div>
                         </div>
                         <div class="form-group row ">
-                            <label for="inputPassword" class="col-sm-4 col-form-label">رقم الهوية</label>
+                            <label for="inputPassword" class="col-md-4 col-sm-6 col-form-label">رقم الهوية</label>
                             <div class="col">
                                 123456789
                             </div>
                         </div>
                         <div class="form-group row ">
-                            <label for="inputPassword" class="col-sm-4 col-form-label">العمر</label>
+                            <label for="inputPassword" class="col-md-4 col-sm-6 col-form-label">العمر</label>
                             <div class="col">
                                24
                             </div>
                         </div>
                         <div class="form-group row ">
-                            <label for="inputPassword" class="col-sm-4 col-form-label">العنوان </label>
+                            <label for="inputPassword" class="col-md-4 col-sm-6 col-form-label">العنوان </label>
                             <div class="col">
                                 غزة / فلسطين
                                 / الشيخ عجيلين
                             </div>
                         </div>
                         <div class="form-group row ">
-                            <label for="inputPassword" class="col-sm-4 col-form-label">الاهتمامات </label>
+                            <label for="inputPassword" class="col-md-4 col-sm-6 col-form-label">الاهتمامات </label>
                             <div class="col">
                                <span class="badge badge-warning">رسم</span>
                                 <span class="badge badge-warning">رسم</span>
@@ -320,7 +320,7 @@
                         </div>
 
                         <div class="form-group row ">
-                                <label for="inputPassword" class="col-sm-4 col-form-label">الزوايا السابقة التي استفاد منها في مراكز العائلة</label>
+                                <label for="inputPassword" class="col-md-4 col-sm-6 col-form-label">الزوايا السابقة التي استفاد منها في مراكز العائلة</label>
                                 <div class="col">
                                     زاوية الدعم الفني
                                 </div>
