--- a/_main_layout.blade/mainPage.html
+++ b/_main_layout.blade/mainPage.html
@@ -83,6 +83,16 @@
                 width: 280px;
             }
         }
+				@media (max-width: 670px){
+.visionSection {
+    padding-top: 0;
+}
+}
+@media (max-width: 670px){
+.aboutSection .aboutLeft .aboutVideo {
+    padding-top: 0;
+}
+}
 
     </style>
 	<!--******************************************* يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد ***************************  -->
@@ -269,7 +279,7 @@
         <div class="bgLight">
             <div class="container">
                 <div class="visionSection">
-                    <img src="../dist/platform/images/img1.jpg" width="50%">
+                    <img src="../dist/platform/images/102.JPG" width="50%">
 					<div class="vissionText">
                         <div class="quoteObjHold">
                             <div class="quoteBlock">
