--- a/_first_layout.blade/show.html
+++ b/_first_layout.blade/show.html
@@ -464,7 +464,7 @@
                                 </div>
                                 <ul>
                                     <li>
-                                            <textarea name="name" rows="2" cols="80"
+                                            <textarea name="name" rows="2" cols="80" readonly
                                                       class="textA">هدف هدف</textarea>
                                         </li>
                                 </ul>
