--- a/_main_layout.blade/mainPage.html
+++ b/_main_layout.blade/mainPage.html
@@ -279,7 +279,7 @@
         <div class="bgLight">
             <div class="container">
                 <div class="visionSection">
-                    <img src="../dist/platform/images/102.JPG" width="50%">
+                    <img src="../dist/platform/images/102.JPG"  class="col-md-6 col-sm-12">
 					<div class="vissionText">
                         <div class="quoteObjHold">
                             <div class="quoteBlock">
@@ -354,7 +354,7 @@
                                     <div class="tab__content-2">
                                         <div class="gap">
                                             <div class="container">
-                                                <div class="row">
+                                                <div class="row" style="margin-left: 50px;">
                                                     <div class="our-cause remove-ext-50 loader-data"
                                                          id="itemContainer2">
                                                         <div class="col-md-4 col-sm-6">
@@ -390,7 +390,7 @@
                                     <div class="tab__content-3">
                                         <div class="gap">
                                             <div class="container">
-                                                <div class="row">
+                                                <div class="row" style="margin-left: 50px;">
                                                     <div class="our-cause remove-ext-50 loader-data"
                                                          id="itemContainer3">
                                                         <div class="col-md-4 col-sm-6">
