--- a/_main_layout.blade/mainPage.html
+++ b/_main_layout.blade/mainPage.html
@@ -417,6 +417,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
+													 <div class="holder holder2"></div>
                                                 </div>
                                             </div>
                                         </div>
