--- a/_first_layout.blade/show.html
+++ b/_first_layout.blade/show.html
@@ -411,6 +411,14 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">
 
+									اسم الفريق: فريق مراسلين
+								</span>
+                                </div>
+                            </div>
+							<div class="input-group form-group mt-5">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text">
+
 									غير مشترك في المبادرة
 								</span>
                                 </div>
@@ -419,43 +427,42 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">الاهتمامات</span>
                                 </div>
-                                <textarea readonly name="name" rows="2"
-                                          cols="90">رسم</textarea>
+                                <div class="col-md-12" style="background-color:#fff;text-align:right;padding:8px;margin-bottom:5px">رسم</div>
                             </div>
                             <!-- نبذة -->
                             <div class="input-group form-group mt-5">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">نبذة عن المبادرة</span>
                                 </div>
-                                <textarea readonly name="name" rows="4" cols="90">نبذة نبذة</textarea>
+                                <div class="col-md-12" style="background-color:#fff;text-align:right;padding:8px;margin-bottom:5px">نبذة نبذة</div>
                             </div>
                             <!-- علاقة المبادرة بالتغيير المجتمعي -->
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">علاقة المبادرة بالتغيير المجتمعي</span>
                                 </div>
-                                <textarea readonly name="name" rows="4" cols="90">تغيير تغيير </textarea>
+                                <div class="col-md-12" style="background-color:#fff;text-align:right;padding:8px;margin-bottom:5px">تغيير تغيير </div>
                             </div>
                             <!-- مبررات المبادرة -->
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">مبررات المبادرة</span>
                                 </div>
-                                <textarea readonly name="name" rows="4" cols="90">مبررات مبررات</textarea>
+                                <div class="col-md-12" style="background-color:#fff;text-align:right;padding:8px;margin-bottom:5px">مبررات مبررات</div>
                             </div>
                             <!-- المشكلة التي تحلها المبادرة -->
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">المشكلة التي تحلها المبادرة</span>
                                 </div>
-                                <textarea readonly name="name" rows="4" cols="90">مشكلة مشكلة</textarea>
+                                <div class="col-md-12" style="background-color:#fff;text-align:right;padding:8px;margin-bottom:5px">مشكلة مشكلة</div>
                             </div>
                             <!-- الهدف الرئيسي للمبادرة -->
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text">الهدف الرئيسي للمبادرة</span>
                                 </div>
-                                <textarea readonly name="name" rows="4" cols="90">هدف هدف</textarea>
+                                <div class="col-md-12" style="background-color:#fff;text-align:right;padding:8px;margin-bottom:5px">هدف هدف</div>
                             </div>
                             <!-- الأهداف الفرعية للمبادرة -->
                             <div class="input-group form-group ">
@@ -464,8 +471,7 @@
                                 </div>
                                 <ul>
                                     <li>
-                                            <textarea name="name" rows="2" cols="80" readonly
-                                                      class="textA">هدف هدف</textarea>
+                                            <div class="col-md-12" style="background-color:#fff;text-align:right;padding:8px;margin-bottom:5px">هدف هدف</div>
                                         </li>
                                 </ul>
                             </div>
