--- a/_main_layout.blade/mainPage.html
+++ b/_main_layout.blade/mainPage.html
@@ -327,7 +327,7 @@
                                                                     </div>
                                                                     <div class="cause-meta">
 
-                                                                        <h3 style="min-height: 240px;"><a href="/initiative/1" title=""
+                                                                        <h3 style="min-height: 240px;max-height: 240px;height: 240px;"><a href="/initiative/1" title=""
                                                                                class="title"> مبادرة نوعية مبادرة نوعية</a></h3>
                                                                         <p style="min-height:85px;max-height:85px;height:85px">مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية
                                                                             ....</p>
@@ -369,7 +369,7 @@
                                                                 </div>
                                                                 <div class="cause-meta">
 
-                                                                    <h3 style="min-height: 240px;"><a href="/initiative/1" title=""
+                                                                    <h3 style="min-height: 240px;max-height: 240px;height: 240px;"><a href="/initiative/1" title=""
                                                                                                       class="title"> مبادرة نوعية مبادرة نوعية</a></h3>
                                                                     <p style="min-height:85px;max-height:85px;height:85px">مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية
                                                                         ....</p>
@@ -405,7 +405,7 @@
                                                                 </div>
                                                                 <div class="cause-meta">
 
-                                                                    <h3 style="min-height: 240px;"><a href="/initiative/1" title=""
+                                                                    <h3 style="min-height: 240px;max-height: 240px;height: 240px;"><a href="/initiative/1" title=""
                                                                                                       class="title"> مبادرة نوعية مبادرة نوعية</a></h3>
                                                                     <p style="min-height:85px;max-height:85px;height:85px">مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية
                                                                         ....</p>
