--- a/_thirst_layout.blade/index.html
+++ b/_thirst_layout.blade/index.html
@@ -346,7 +346,7 @@
                                                 <h2 style="height:72px;min-height:72px;max-height: 72px;"><a
                                                             href="/initiative/1"
                                                             title="">مبادرة نوعية</a></h2>
-                                                <p style="min-height: 72px">
+                                                <p style="min-height: 72px;max-height: 72px">
                                                     مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية مبادرة نوعية....
                                                 </p>
                                                 <a href="/initiative/1" title="" class="donate-me"
