--- a/_thirst_layout.blade/index4.html
+++ b/_thirst_layout.blade/index4.html
@@ -332,7 +332,7 @@
                             <div class="cause-meta">
 
                                 <h2 style="height:72px;min-height:72px;max-height: 72px;"><a href="/initiative/1" title="">مركز العمل التنموي معا</a></h2>
-                                <p style="min-height: 82px">
+                                <p style="min-height: 72px;max-height: 72px">
                                     مبادرة نوعية مبادرة نوعية....
                                 </p>
                                 <a href="/initiative/1" title="" class="donate-me" data-ripple="">تفاصيل
