--- a/_thirst_layout.blade/index_don.html
+++ b/_thirst_layout.blade/index_don.html
@@ -335,7 +335,7 @@
                                 </div>
                                 <span>34 % (15$ /150$)</span>
                                 <h2 style="height:72px;min-height:72px;max-height: 72px;"><a href="/initiative/1" title="" style="margin-right:20px;">مبادرة بحاجة لتبرع</a></h2>
-                                <p style="min-height: 72px"> مبادرة بحاجة لتبرع مبادرة بحاجة لتبرع مبادرة بحاجة لتبرع....
+                                <p style="min-height: 72px;max-height: 72px"> مبادرة بحاجة لتبرع مبادرة بحاجة لتبرع مبادرة بحاجة لتبرع....
                                 </p>
                                 <a href="/donationList/create?initiative_id=1" title="" class="donate-me" data-ripple="">تبرع</a>
                             </div>
