--- a/_thirst_layout.blade/index3.html
+++ b/_thirst_layout.blade/index3.html
@@ -286,7 +286,7 @@
                             <div class="cause-meta">
 
                                 <h2 style="height:72px;min-height:72px;max-height: 72px;"><a href="/article/1" title="">خبر عاجل خبر عاجل</a></h2>
-                                <p style="min-height: 72px">
+                                <p style="min-height: 72px;max-height: 72px">
                                    خبر عاجل خبر عاجل خبر عاجل خبر عاجل....
                                 </p>
                                 <a href="/article/1" title="" class="donate-me" data-ripple="">عرض الخبر</a>
