--- a/_thirst_layout.blade/show.html
+++ b/_thirst_layout.blade/show.html
@@ -281,7 +281,7 @@
                             <div class="cause-meta">
 
                                 <h2 style="height:72px;min-height:72px;max-height: 72px;"><a href="/article/1" title="">خبز عاحل وليس خبر عاجل</a></h2>
-                                <p style="min-height: 72px">
+                                <p style="min-height: 72px;max-height: 72px">
                                     خبز عاحل وليس خبر عاجل خبز عاحل وليس خبر عاجل خبز عاحل وليس خبر عاجل....
                                 </p>
                                 <a href="/article/1" title="" class="donate-me" data-ripple="">عرض الخبر</a>
