--- a/_thirst_layout.blade/show_art.html
+++ b/_thirst_layout.blade/show_art.html
@@ -280,7 +280,7 @@
                             <div class="cause-meta">
 
                                 <h2 style="height:72px;min-height:72px;max-height: 72px;"><a href="/article/1" title="">خبر نوعي</a></h2>
-                                <p style="min-height: 72px">
+                                <p style="min-height: 72px;max-height: 72px">
                                    خبر نوعي خبر نوعي خبر نوعي....
                                 </p>
                                 <a href="/article/1" title="" class="donate-me" data-ripple="">عرض الخبر</a>
