--- a/_main_layout.blade/mainPage.html
+++ b/_main_layout.blade/mainPage.html
@@ -8,7 +8,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="shortcut icon" href="../dist/Group.ico" />
-    <title>مركز العمل التنموي معا</title>
+    <title>ًمركز العمل التنموي معا</title>
     <link rel="stylesheet" href="../dist/platform/dist/styles/developer.css">
     <link rel="stylesheet" href="../dist/platform/dist/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
