--- a/_first_layout.blade/register.html
+++ b/_first_layout.blade/register.html
@@ -92,6 +92,9 @@
         .card {
             height: auto;
         }
+        .fas{
+          color: white;
+        }
     </style>
 
     <!--****----******-------------------- start privet header ------------*********------********* -->
@@ -237,14 +240,21 @@
                                 <h3>البيانات الشخصية</h3>
                             </div>
                         </div>
+                        <div class="">
+                        </div>
                         <div class="card-body">
+                          <!--  كلمة المرور-->
+                          <div class="input-group form-group">
+                            <p style="color:white">(*) تعني جميع الحقول مطلوب تعبئتها</p>
+
+                          </div>
                             <!--  الاسم رباعي-->
                             <div class="row">
                                 <div class="col">
                                     <div class="input-group form-group">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fas fa-user"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                         </div>
                                         <input type="text" class="form-control" placeholder="الاسم الأول" name="name"
                                                value="">
@@ -254,7 +264,7 @@
                                     <div class="input-group form-group">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fas fa-user"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                         </div>
                                         <input type="text" class="form-control" placeholder="اسم الأب "
                                                value=""
@@ -267,7 +277,7 @@
                                     <div class="input-group form-group">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fas fa-user"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                         </div>
                                         <input type="text" class="form-control" placeholder="اسم الجد"
                                                value="" name="grand_father_name">
@@ -277,7 +287,7 @@
                                     <div class="input-group form-group">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="fas fa-user"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                         </div>
                                         <input type="text" class="form-control" placeholder="العائلة"
                                                value=""
@@ -289,7 +299,7 @@
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-envelope"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                 </div>
                                 <input type="email" class="form-control" value=""
                                        name="email" required placeholder="الايميل">
@@ -298,7 +308,7 @@
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-user"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                 </div>
                                 <input type="text" class="form-control" value=""
                                        name="user_name"
@@ -308,7 +318,7 @@
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-key"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                 </div>
                                 <input type="password" class="form-control" value=""
                                        name="password" required
@@ -318,7 +328,7 @@
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-key"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                 </div>
                                 <input type="password" class="form-control" value=""
                                        name="password_confirmation" required
@@ -328,7 +338,7 @@
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-sort-numeric-up"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                 </div>
                                 <input type="number" value="{{old("ido")}}"
                                        name="ido" required
@@ -356,7 +366,7 @@
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><span style="font-size:14px">الجنس</span>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                 </div>
                                 <input type="radio" name="gender" value="M" required
                                        data-title="Male" class="form-control">
@@ -369,7 +379,7 @@
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-table"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                 </div>
                                 <input id="datepicker" width="276" name="brth_day"
                                        value="" required placeholder="تاريخ الميلاد"/>
@@ -379,7 +389,7 @@
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-city"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                 </div>
                                 <select name="governorate_id" id="governorate_id" class="form-control"
                                         placeholder="المحافظة">
@@ -390,7 +400,7 @@
                             <div class="input-group form-group" id="city_id">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-city"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                 </div>
                                 <select id="city_list" name="city_id"
                                         class="form-control" required>
@@ -401,7 +411,7 @@
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text"><i class="fas fa-map-marker-alt"></i>
-												<font style="color:#f4fc02;font-size:20px">*</font></span>
+												<font style="color:black;font-size:20px">*</font></span>
                                 </div>
                                 <input type="text" class="form-control" name="neighborhood"
                                        value="" required placeholder="العنوان">
