--- a/_first_layout.blade/create.html
+++ b/_first_layout.blade/create.html
@@ -93,9 +93,9 @@
         }
     </style>
 <!--******************************************* يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد ***************************  -->
-	
+
 	<!------------------------------------------يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد---------->
-   
+
     <!--****----******-------------------- start privet header ------------*********------********* -->
 
 
@@ -200,7 +200,7 @@
                     <a style="max-width: 166px;max-height: 75px;overflow: hidden;width:90%;background:#c4233d;color:white;margin-right:40px;border-radius:20px;"
                        class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        رامي ليفي
+                       الميسّر رامي ليفي
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/activist">البروفايل</a>
@@ -338,10 +338,10 @@
                             <!--  العنوان-->
                             <div class="input-group form-group">
                                 <div class="input-group-prepend">
-                                    <span class="input-group-text">العنوان</span>
+                                    <span class="input-group-text">اسم البنك</span>
                                 </div>
                                 <input required type="text" value=""
-                                       name="financier_address" class="form-control" placeholder="أدخل عنوانك كاملاً">
+                                       name="financier_address" class="form-control" placeholder="أدخل اسم البنك">
                             </div>
                             <!--زر تأكيد -->
                             <div class=" form-group" style="margin-top:50px;">
