--- a/_first_layout.blade/show.html
+++ b/_first_layout.blade/show.html
@@ -93,9 +93,9 @@
         }
     </style>
 <!--******************************************* يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد ***************************  -->
-	
+
 	<!------------------------------------------يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد---------->
-   
+
     <!--****----******-------------------- start privet header ------------*********------********* -->
 
 
@@ -287,7 +287,8 @@
                     <a style="max-width: 166px;max-height: 75px;overflow: hidden;width:90%;background:#c4233d;color:white;margin-right:40px;border-radius:20px;"
                        class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        رامي ليفي
+                       الميسّر رامي ليفي
+
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/activist">البروفايل</a>
@@ -353,7 +354,7 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text">اسم المنشط</span>
+                                            <span class="input-group-text">اسم الميسّر</span>
                                         </div>
                                     </div>
                                     <div class="col-md-3 text-right">
@@ -361,7 +362,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="input-group-prepend">
-                                            <span class="input-group-text">مركز عائلة المنشط</span>
+                                            <span class="input-group-text">مركز عائلة الميسّر</span>
                                         </div>
                                     </div>
                                     <div class="col-md-3 text-center">
