--- a/_thirst_layout.blade/index_don.html
+++ b/_thirst_layout.blade/index_don.html
@@ -164,6 +164,10 @@
             float: left;
             background: #c4233d;
             border-radius: 20px;
+            width: 120px;
+            text-align: center;
+            font-size: 20px
+
         }
 
         .required-amount {
@@ -434,4 +438,3 @@
 
 </html>
 <!--******************************************* end thirst layout footer ***************************  -->
-
