--- a/_first_layout.blade/no_accsess.html
+++ b/_first_layout.blade/no_accsess.html
@@ -93,9 +93,9 @@
         }
     </style>
 <!--******************************************* يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد ***************************  -->
-	
+
 	<!------------------------------------------يرجى وضع المحتوى البرافيت بين الكوممنتين، وتبيزه عن المحتوى اللي اوت هيدر وفتر موحد---------->
-   
+
     <!--****----******-------------------- start privet header ------------*********------********* -->
 
     <style>
@@ -177,7 +177,7 @@
                     <a style="max-width: 166px;max-height: 75px;overflow: hidden;width:90%;background:#c4233d;color:white;margin-right:40px;border-radius:20px;"
                        class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                       رامي ليفي
+                       الميسّر رامي ليفي
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/activist">البروفايل</a>
