--- a/_first_layout.blade/how_are.html
+++ b/_first_layout.blade/how_are.html
@@ -178,7 +178,7 @@
                     <a style="max-width: 166px;max-height: 75px;overflow: hidden;width:90%;background:#c4233d;color:white;margin-right:40px;border-radius:20px;"
                        class="nav-link dropdown-toggle" href="#dropdown" id="navbarDropdown" role="button"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                       الميسّر رامي ليفي
+                       رامي ليفي
                     </a>
                     <div class="dropdown-menu" id="dropdown" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/activist">البروفايل</a>
